tests/compile-fail/sync/libc_pthread_rwlock_destroy_read_locked.stderr
error: Undefined Behavior: destroyed a locked rwlock
  --> $DIR/libc_pthread_rwlock_destroy_read_locked.rs:11:9
   |
11 |         libc::pthread_rwlock_destroy(rw.get()); //~ ERROR destroyed a locked rwlock
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ destroyed a locked rwlock
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/libc_pthread_rwlock_destroy_read_locked.rs:11:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

